fix(post): increase footnotes ol padding to prevent multi-digit number clipping

--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -795,7 +795,7 @@ $ext-link-icon: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg
     word-break: break-word;
 
     ol {
-      padding-left: $sp-5;
+      padding-left: $sp-8;
     }
 
     a {
